# relibc

./: Cargo.toml
src/: lib.rs
src/header/sys_socket/: mod.rs
src/netdb/: Cargo.toml  build.rs  cbindgen.toml
src/netdb/src/: lib.rs
src/netinet/in/src/: lib.rs
src/platform/src/: lib.rs  rawfile.rs  rlb.rs  types.rs
src/platform/src/linux/: mod.rs
src/platform/src/redox/: mod.rs
src/pwd/src/: lib.rs
src/stdio/src/: printf.rs
src/strings/src/: lib.rs
src/sys_ioctl/: Cargo.toml
src/sys_socket/: cbindgen.toml
src/sys_socket/src/: lib.rs
src/sys_utsname/: Cargo.toml
src/time/src/: constants.rs
tests/: .gitignore  Makefile  netdb.c
tests/resource/: getrusage
