[package]
name = "netdb"
version = "0.1.0"
authors = ["Paul Sajna <sajattack@gmail.com>"]
build = "build.rs"

[build-dependencies]
cbindgen = { path = "../../cbindgen" }

[dependencies]
arpainet = { path = "../arpainet" }
errno  = { path = "../errno" }
fcntl = { path = "../fcntl" }
platform = { path = "../platform" }
netinet = { path = "../netinet" }
sys_socket = { path = "../sys_socket" }
stdlib = { path = "../stdlib" }
string = { path = "../string" }
time = { path = "../time" }
